Sat Jan 15 22:33:33 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/internal/elf-macros.s (CHGMODE): Fix bug exposed by
	binutils 2.21.

Mon Jan 10 03:24:52 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* resource/getrlimit.c (getrlimit): Follow prototype change.
	* resource/setrlimit.c (setrlimit): Likewise.
	* resource/getrusage.c (getrusage): Likewise.
	* resource/getprior.c (getpriority): Likewise.
	* resource/setprior.c (setpriority): Likewise.
	* include/sys/resource.h: Split off types to...
	* include/bits/resource.h: ...this new file.
	* include/sys/resource.h (__rlimit_resource_t, __rusage_who_t,
	__priority_which_t): New types which are either int or enum.
	* include/sys/wait.h: Hard include sys/resource.h.
	(wait3, wait4): Conditional declaration.
	* Makefile.am (bits/resource.h): Add.

Mon Jan 10 02:31:26 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* string/mempcpy.c (mempcpy): New.
	* include/string.h (mempcpy): Declare.
	* wchar/wmempcpy.c (wmempcpy): New.
	* include/wchar.h (wmempcpy): Declare.
	* Makefile.am (string/mempcpy.c, wchar/wmempcpy): Add.
	* stdlib/msort.c (msort_with_tmp): Use __mempcpy.

Wed Jan  5 00:42:46 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* README: Latest iconv version is 0.11.

Mon Nov 29 23:23:47 CET 2010  Jeffrey Lee  <me@phlamethrower.co.uk>
			      John Tytgat  <John.Tytgat@aaug.net>

	* include/sys/mman.h (msync): Update comment.
	* sys/mman.c (mmap_info): Add flags, fd and offset.
	(mmap): Remove check DA being enabled for heap usage.
	(msync): Add basic implementation.
	(munmap): Flush changes.
	(mremap): Add check on unsupported case of remapping mapped files.

Sun Oct  3 17:08:22 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* signal/post.c: Minor cleanups.
	* gdtoa/arith.h: Add ARM/VFP case.

Sun Oct  3 14:28:27 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* include/math.h: Only include bits/huge_vall.h when
	__NO_LONG_DOUBLE_MATH is not defined.