@@ -1,23 +1,20 @@
 /* strdup ()
- * Copyright (c) 2000-2008 UnixLib Developers
+ * Copyright (c) 2000-2011 UnixLib Developers
  */
 
 #include <stdlib.h>
 #include <string.h>
-#include <sys/cdefs.h>
 
 char *
 __strdup (const char *string)
 {
-  int len;
-  char *newstr;
-
   if (!string)
-    return 0;
+    return NULL;
 
-  len = strlen (string) + 1;
+  size_t len = strlen (string) + 1;
+  char *newstr;
   if ((newstr = malloc (len)) == NULL)
     return NULL;
   return memcpy (newstr, string, len);
 }
-weak_alias(__strdup, strdup);
+weak_alias(__strdup, strdup)
